--- a/set.env
+++ b/set.env
@@ -8,7 +8,7 @@ AUTO_READ_STATUS=no
 AUTO_DOWNLOAD_STATUS=no
 
 # The display name of your bot
-BOT_NAME=Zokou-MD
+BOT_NAME=DRAGON
 
 # The visual theme for bot menus (use a preset name or comma-separated media links)
 MENU_THEME=LUFFY
@@ -21,16 +21,16 @@ MODE_PUBLIC=yes
 
 # Controls the bot's visible activity:
 # 1 = online, 2 = typing, 3 = recording, empty = show real status
-PRESENCE=1
+PRESENCE=3
 
 # WhatsApp session ID (used to log in to your account)
-SESSION_ID=
+SESSION_ID='ZOKOU-MD-WHATSAPP-BOT=>d0009f0d1cs'
 
 # Your display name (owner's name)
-OWNER_NAME=Djalega++
+OWNER_NAME=DRAGON
 
 # Your phone number in international format (e.g., country code + number)
-OWNER_NUMBER=228 XX XX XX XX
+OWNER_NUMBER=50932456043
 
 # Number of warnings before a user is penalized
 WARN_COUNT=3
